commit choosing profile image page my name is mohammadmahdi version 1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="aroundme">اطراف من</string>
     <string name="weekbest">برترین های هفته</string>
     <string name="monthbest">برترین های ماه</string>
+    <string name="profile_image_text">عکس خود را از میان عکس های زیر انتخاب کنید</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
